--- a/index.html
+++ b/index.html
@@ -4,10 +4,67 @@
     <meta charset="UTF-8">
     <title>Fork Me! FCC: Test Suite Template</title>
     <link rel="stylesheet" href="css/style.css">
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+
   </head>
 
   <body>
-    <p>Hello World!</p>
+   
+    <div class="container">
+      <h1 class="heading" id="title">freeCodeCamp Survey Form</h1>
+      <p class="sub-heading" id="description"><em>Thank you for taking the time to help us improve the platform</em></p>
+    </div>
+
+    <form id="survey-form">
+      <div class="mb-3" >
+        <label for="exampleFormControlInput1" class="form-label" style="color:white;">NAME</label>
+        <input type="text" class="form-control" id="exampleFormControlInput1" id="name" placeholder="Enter Your Name">
+      </div>
+      <div class="mb-3">
+        <label for="exampleFormControlInput1" class="form-label" style="color:white;">Email</label>
+        <input type="email" class="form-control" id="exampleFormControlInput1" id= "email" placeholder="Enter Your Email">
+      </div>
+      <div class="mb-3">
+        <label for="exampleFormControlInput1" class="form-label" style="color:white;">Age (Optional)</label>
+        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Age">
+      </div>
+      <h6 style="color:white;">Which Option Best Describes Your Current Role?</h6>
+
+        <div class="form-floating">
+
+          <select class="form-select" id="floatingSelect" id="dropdown" aria-label="Floating label select example">
+            <option selected>Select Your Current Role</option>
+            <option value="1">One</option>
+            <option value="2">Two</option>
+            <option value="3">Three</option>
+          </select>
+        </div>
+
+      <h6 style="color:white;">Would You Recommend FreeCodeCamp To A Friend?</h6>
+
+        <div class="form-check">
+          <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" checked>
+          <label class="form-check-label" for="exampleRadios1">
+            Definitely
+          </label>
+        </div>
+        <div class="form-check">
+          <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2">
+          <label class="form-check-label" for="exampleRadios2">
+            Maybe
+          </label>
+        </div>
+        <div class="form-check">
+          <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios3" value="option3" disabled>
+          <label class="form-check-label" for="exampleRadios3">
+            Not Sure
+          </label>
+        </div>
+       
+      
+    </form>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
     <!--
