--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
   </head>
 
   <body>
-<<<<<<< HEAD
    
     <div class="container">
       <h1 class="heading" id="title">freeCodeCamp Survey Form</h1>
@@ -66,9 +65,7 @@
        
       
     </form>
-=======
-
->>>>>>> 94a816671aa5a0c10e8ee0386f2910ad238a92f8
+    <p>“Hello World, we are software developers!”</p>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
     <!--
