--- a/index.html
+++ b/index.html
@@ -19,30 +19,35 @@
 
     <form id="survey-form" class="card ">
       <div class="mb-3 form-control" >
-        <label for="exampleFormControlInput1" class="form-label" style="color:white;">NAME</label>
-        <input type="text" class="form-control" id="exampleFormControlInput1" id="name" placeholder="Enter Your Name">
+        <label for="name" class="form-label" id="name-label">Name</label>
+        <input type="text" class="form-control" id="name" id="name" placeholder="Enter Your Name">
       </div>
       <div class="mb-3 form-control">
-        <label for="exampleFormControlInput1" class="form-label" style="color:white;">Email</label>
-        <input type="email" class="form-control" id="exampleFormControlInput1" id= "email" placeholder="Enter Your Email">
+        <label for="email" class="form-label" id="email-label">Email</label>
+        <input type="email" class="form-control" id="email" id= "email" placeholder="Enter Your Email">
       </div>
       <div class="mb-3 form-control">
-        <label for="exampleFormControlInput1" class="form-label" style="color:white;">Age (Optional)</label>
-        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Age">
+        <label for="number" class="form-label" id="number-label">Age (Optional)</label>
+        <input type="email" class="form-control" id="number" placeholder="Age">
       </div>
-      <h6 style="color:white;">Which Option Best Describes Your Current Role?</h6>
 
-        <div class="form-floating ">
+  <div class="form-group">
+    <label for="dropdown">Which option best describes your current role?
+</label>
+    <select class="form-control" id="dropdown">
+      <option>Select current role</option>
+      <option>Student</option>
+      <option>Full Time Job</option>
+      <option>Full Time Learner</option>
+      <option>Prefer not to say</option>
+      <option>Other</option>
 
-          <select class="form-select" id="floatingSelect" id="dropdown" aria-label="Floating label select example">
-            <option selected>Select Your Current Role</option>
-            <option value="1">One</option>
-            <option value="2">Two</option>
-            <option value="3">Three</option>
-          </select>
-        </div>
+    </select>
+  </div>
+<div class="form-group">
+  <label >What would you like to see improved? (Check all that apply)</label>
 
-      <h6 style="color:white;">Would You Recommend FreeCodeCamp To A Friend?</h6>
+      <h6 ></h6>
 
         <div class="form-check">
           <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" checked>
@@ -62,10 +67,10 @@
             Not Sure
           </label>
         </div>
-       
+       </div>
   <div class="form-group">
-    <label for="selectoption">What is your favorite feature of freeCodeCamp?</label>
-    <select class="form-control" id="selectoption">
+    <label for="dropdown">What is your favorite feature of freeCodeCamp?</label>
+    <select class="form-control" id="dropdown">
       <option>Select an option</option>
       <option>Challenes</option>
       <option>Projects</option>
@@ -73,7 +78,76 @@
       <option>Open source</option>
     </select>
   </div>
-    </form>
+  
+<div class="form-group">
+  <label >What would you like to see improved? (Check all that apply)</label>
+
+  <div class="form-check">
+    <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+    <label class="form-check-label" for="defaultCheck1">Front-end Projects    </label></div>
+    <div class="form-check">
+    <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+    <label class="form-check-label" for="defaultCheck1">Back-end Projects    </label>
+    </div>
+    <div class="form-check">
+    <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+    <label class="form-check-label" for="defaultCheck1">Data Visualization
+    </label>
+    </div>
+    <div class="form-check">
+    <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+    <label class="form-check-label" for="defaultCheck1">Challenges</label>
+    </div>
+    <div class="form-check">
+    <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+    <label class="form-check-label" for="defaultCheck1">Open Source Community
+    </label>
+    </div>
+    <div class="form-check">
+    <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+    <label class="form-check-label" for="defaultCheck1">Gitter help rooms
+    </label>
+  </div>
+    <div class="form-check">
+    <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+    <label class="form-check-label" for="defaultCheck1">Videos
+    </label>
+  </div>
+    <div class="form-check">
+    <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+    <label class="form-check-label" for="defaultCheck1">City Meetups
+
+    </label>
+  </div>
+    <div class="form-check">
+    <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+    <label class="form-check-label" for="defaultCheck1">Wiki
+    </label>
+  </div>
+    <div class="form-check">
+    <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+    <label class="form-check-label" for="defaultCheck1">Forum
+    </label>
+  </div>
+    <div class="form-check">
+    <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+    <label class="form-check-label" for="defaultCheck1">Additional Courses
+
+    </label>
+</div>
+
+
+
+
+
+
+   </div>
+       </form>
+
+</div>
+
+
+
     <p>“Hello World, we are software developers!”</p>
 <!--     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
  -->
