--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
     
 
     <form id="survey-form" class="card ">
-      <div class="mb-3 form-control" >
+      <div class="form-group" >
         <label for="name" class="form-label" id="name-label">Name</label>
         <input type="text" class="form-control" id="name" id="name" placeholder="Enter Your Name">
       </div>
-      <div class="mb-3 form-control">
+      <div class="form-group">
         <label for="email" class="form-label" id="email-label">Email</label>
         <input type="email" class="form-control" id="email" id= "email" placeholder="Enter Your Email">
       </div>
-      <div class="mb-3 form-control">
+      <div class="form-group">
         <label for="number" class="form-label" id="number-label">Age (Optional)</label>
         <input type="email" class="form-control" id="number" placeholder="Age">
       </div>
@@ -45,9 +45,8 @@
     </select>
   </div>
 <div class="form-group">
-  <label >What would you like to see improved? (Check all that apply)</label>
+  <label >Would You Recommend FreeCodeCamp To A Friend?</label>
 
-      <h6 ></h6>
 
         <div class="form-check">
           <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" checked>
