--- a/index.html
+++ b/index.html
@@ -1,51 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <title>Fork Me! FCC: Test Suite Template</title>
-    <link rel="stylesheet" href="css/style.css">
+<head>
+  <meta charset="UTF-8">
+  <title>Fork Me! FCC: Test Suite Template</title>
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="css/style.css">
 
-  </head>
+</head>
 
-  <body>
-   
-    <div class="container">
-      <h1 class="heading" id="title">freeCodeCamp Survey Form</h1>
-      <p class="sub-heading" id="description"><em>Thank you for taking the time to help us improve the platform</em></p>
-    
+<body>
 
-    <form id="survey-form" class="card ">
-      <div class="form-group" >
+  <div class="container">
+          <div class="form-group"  id="heading">
+
+    <h1 class="heading" id="title">freeCodeCamp Survey Form</h1>
+    <p class="sub-heading" id="description"><em>Thank you for taking the time to help us improve the platform</em></p>
+    </div>
+      <div class="border border-0" id="borderspan">
+
+      <form id="survey-form">
+      <div class="form-group"  id="name">
         <label for="name" class="form-label" id="name-label">Name</label>
         <input type="text" class="form-control" id="name" id="name" placeholder="Enter Your Name">
       </div>
-      <div class="form-group">
+      <div class="form-group mt-4" id="email">
         <label for="email" class="form-label" id="email-label">Email</label>
         <input type="email" class="form-control" id="email" id= "email" placeholder="Enter Your Email">
       </div>
-      <div class="form-group">
+      <div class="form-group mt-4" id="number">
         <label for="number" class="form-label" id="number-label">Age (Optional)</label>
         <input type="email" class="form-control" id="number" placeholder="Age">
       </div>
 
-  <div class="form-group">
-    <label for="dropdown">Which option best describes your current role?
-</label>
-    <select class="form-control" id="dropdown">
-      <option>Select current role</option>
-      <option>Student</option>
-      <option>Full Time Job</option>
-      <option>Full Time Learner</option>
-      <option>Prefer not to say</option>
-      <option>Other</option>
+      <div class="form-group mt-4" id="dropdown1">
+        <label for="dropdown">Which option best describes your current role?
+        </label>
+        <select class="form-control mt-4" id="dropdown">
+          <option>Select current role</option>
+          <option>Student</option>
+          <option>Full Time Job</option>
+          <option>Full Time Learner</option>
+          <option>Prefer not to say</option>
+          <option>Other</option>
 
-    </select>
-  </div>
-<div class="form-group">
-  <label >Would You Recommend FreeCodeCamp To A Friend?</label>
+        </select>
+      </div>
+      <div class="form-group mt-4" id="checkboxes1">
+        <label >Would You Recommend FreeCodeCamp To A Friend?</label>
 
 
         <div class="form-check">
@@ -66,103 +69,89 @@
             Not Sure
           </label>
         </div>
-       </div>
-  <div class="form-group">
-    <label for="dropdown">What is your favorite feature of freeCodeCamp?</label>
-    <select class="form-control" id="dropdown">
-      <option>Select an option</option>
-      <option>Challenes</option>
-      <option>Projects</option>
-      <option>Community</option>
-      <option>Open source</option>
-    </select>
-  </div>
-  
-<div class="form-group">
-  <label >What would you like to see improved? (Check all that apply)</label>
+      </div>
+      <div class="form-group mt-4" id="dropdown2">
+        <label for="dropdown">What is your favorite feature of freeCodeCamp?</label>
+        <select class="form-control" id="dropdown">
+          <option>Select an option</option>
+          <option>Challenes</option>
+          <option>Projects</option>
+          <option>Community</option>
+          <option>Open source</option>
+        </select>
+      </div>
 
-  <div class="form-check">
-    <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
-    <label class="form-check-label" for="defaultCheck1">Front-end Projects    </label></div>
-    <div class="form-check">
-    <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
-    <label class="form-check-label" for="defaultCheck1">Back-end Projects    </label>
-    </div>
-    <div class="form-check">
-    <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
-    <label class="form-check-label" for="defaultCheck1">Data Visualization
-    </label>
-    </div>
-    <div class="form-check">
-    <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
-    <label class="form-check-label" for="defaultCheck1">Challenges</label>
-    </div>
-    <div class="form-check">
-    <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
-    <label class="form-check-label" for="defaultCheck1">Open Source Community
-    </label>
-    </div>
-    <div class="form-check">
-    <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
-    <label class="form-check-label" for="defaultCheck1">Gitter help rooms
-    </label>
-  </div>
-    <div class="form-check">
-    <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
-    <label class="form-check-label" for="defaultCheck1">Videos
-    </label>
-  </div>
-    <div class="form-check">
-    <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
-    <label class="form-check-label" for="defaultCheck1">City Meetups
+      <div class="form-group mt-4" id="checkboxes2">
+        <label >What would you like to see improved? (Check all that apply)</label>
 
-    </label>
-  </div>
-    <div class="form-check">
-    <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
-    <label class="form-check-label" for="defaultCheck1">Wiki
-    </label>
-  </div>
-    <div class="form-check">
-    <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
-    <label class="form-check-label" for="defaultCheck1">Forum
-    </label>
-  </div>
-    <div class="form-check">
-    <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
-    <label class="form-check-label" for="defaultCheck1">Additional Courses
+        <div class="form-check">
+          <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+          <label class="form-check-label" for="defaultCheck1">Front-end Projects    </label></div>
+          <div class="form-check">
+            <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+            <label class="form-check-label" for="defaultCheck1">Back-end Projects    </label>
+          </div>
+          <div class="form-check">
+            <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+            <label class="form-check-label" for="defaultCheck1">Data Visualization
+            </label>
+          </div>
+          <div class="form-check">
+            <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+            <label class="form-check-label" for="defaultCheck1">Challenges</label>
+          </div>
+          <div class="form-check">
+            <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+            <label class="form-check-label" for="defaultCheck1">Open Source Community
+            </label>
+          </div>
+          <div class="form-check">
+            <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+            <label class="form-check-label" for="defaultCheck1">Gitter help rooms
+            </label>
+          </div>
+          <div class="form-check">
+            <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+            <label class="form-check-label" for="defaultCheck1">Videos
+            </label>
+          </div>
+          <div class="form-check">
+            <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+            <label class="form-check-label" for="defaultCheck1">City Meetups
 
-    </label>
+            </label>
+          </div>
+          <div class="form-check">
+            <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+            <label class="form-check-label" for="defaultCheck1">Wiki
+            </label>
+          </div>
+          <div class="form-check">
+            <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+            <label class="form-check-label" for="defaultCheck1">Forum
+            </label>
+          </div>
+          <div class="form-check">
+            <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+            <label class="form-check-label" for="defaultCheck1">Additional Courses
+
+            </label>
+          </div>
+
+        </div>
+        <div class="form-group mt-4" id="textarea">
+          <label for="Textarea">Any comments or suggestions?</label>
+          <textarea class="form-control" id="Textarea" rows="3" placeholder="Enter your comment here..."></textarea>
+        </div>
+      
+        <input class="btn btn-success mt-4" id="button" type="submit" value="Submit">
+
+
+
+
+      </form>
 </div>
+    </div>
 
-
-
-
-
-
-   </div>
-       </form>
-
-</div>
-
-
-
-    <p>“Hello World, we are software developers!”</p>
-<!--     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
- -->
-    <!--
-
-    Hello Camper!
-
-    For now, the test suite only works in Chrome!
-    Please read the README below in the JS Editor before beginning.
-    Feel free to delete this message once you have read it.
-    Good luck and Happy Coding!
-
-    - The freeCodeCamp Team
-
-    -->
-  </div>
-    <script  src="js/index.js"></script>
-  </body>
+</body>
 </html>
