--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <title>Fork Me! FCC: Test Suite Template</title>
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="css/style.css">
 
 </head>
@@ -23,15 +22,15 @@
       <form id="survey-form">
       <div class="form-group"  id="name">
         <label for="name" class="form-label" id="name-label">Name</label>
-        <input type="text" class="form-control" id="name" id="name" placeholder="Enter Your Name">
+        <input type="text" class="form-control" id="name" id="name" placeholder="Enter Your Name" required>
       </div>
       <div class="form-group mt-4" id="email">
         <label for="email" class="form-label" id="email-label">Email</label>
-        <input type="email" class="form-control" id="email" id= "email" placeholder="Enter Your Email">
+        <input type="email" class="form-control" id="email" id= "email" placeholder="Enter Your Email" required>
       </div>
       <div class="form-group mt-4" id="number">
         <label for="number" class="form-label" id="number-label">Age (Optional)</label>
-        <input type="email" class="form-control" id="number" placeholder="Age">
+        <input type="email" class="form-control" id="number" placeholder="Age" min="10" max="100">
       </div>
 
       <div class="form-group mt-4" id="dropdown1">
@@ -144,7 +143,7 @@
           <textarea class="form-control" id="Textarea" rows="3" placeholder="Enter your comment here..."></textarea>
         </div>
       
-        <input class="btn btn-success mt-4" id="button" type="submit" value="Submit">
+        <input class="form-control btn btn-success mt-4" id="button" type="submit" value="Submit">
 
 
 
@@ -152,6 +151,7 @@
       </form>
 </div>
     </div>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 
 </body>
 </html>
