--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Fork Me! FCC: Test Suite Template</title>
+<meta charset = "UTF-8"/>
+  <title> Fork Me! FCC: Test Suite Template</title>
 
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
   <link rel="stylesheet" href="css/style.css">
 
 </head>
@@ -15,22 +15,23 @@
           <div class="form-group"  id="heading">
 
     <h1 class="heading" id="title">freeCodeCamp Survey Form</h1>
-    <p class="sub-heading" id="description"><em>Thank you for taking the time to help us improve the platform</em></p>
+    <p class="ml-4 sub-heading " id="description"><em>Thank you for taking the time to help us improve the platform</em></p>
     </div>
       <div class="border border-0" id="borderspan">
 
-      <form id="survey-form">
-      <div class="form-group"  id="name">
+      <form id="survey-form" action="#" method="post">
+      <div class="form-group">
         <label for="name" class="form-label" id="name-label">Name</label>
-        <input type="text" class="form-control" id="name" id="name" placeholder="Enter Your Name" required>
+        <input type="text" class="form-control" id="name" id="name" placeholder="Enter Your Name" required/>
+
       </div>
-      <div class="form-group mt-4" id="email">
+      <div class="form-group mt-4">
         <label for="email" class="form-label" id="email-label">Email</label>
-        <input type="email" class="form-control" id="email" id= "email" placeholder="Enter Your Email" required>
+        <input type="email" class="form-control" id="email" id= "email" placeholder="Enter Your Email" required/>
       </div>
-      <div class="form-group mt-4" id="number">
+      <div class="form-group mt-4">
         <label for="number" class="form-label" id="number-label">Age (Optional)</label>
-        <input type="email" class="form-control" id="number" placeholder="Age" min="10" max="100">
+        <input type="number" class="form-control" id="number" placeholder="Age" min="10" max="100">
       </div>
 
       <div class="form-group mt-4" id="dropdown1">
@@ -84,54 +85,54 @@
         <label >What would you like to see improved? (Check all that apply)</label>
 
         <div class="form-check">
-          <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
-          <label class="form-check-label" for="defaultCheck1">Front-end Projects    </label></div>
+          <input class="form-check-input" type="checkbox" value="Front-end Projects" id="defaultCheck1">
+          <label class="form-check-label" for="defaultCheck1">Front-end Projects </label></div>
           <div class="form-check">
-            <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
-            <label class="form-check-label" for="defaultCheck1">Back-end Projects    </label>
+            <input class="form-check-input" type="checkbox" value="Back-end Projects" id="defaultCheck1">
+            <label class="form-check-label" for="defaultCheck1">Back-end Projects </label>
           </div>
           <div class="form-check">
-            <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+            <input class="form-check-input" type="checkbox" value="Data Visualization" id="defaultCheck1">
             <label class="form-check-label" for="defaultCheck1">Data Visualization
             </label>
           </div>
           <div class="form-check">
-            <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+            <input class="form-check-input" type="checkbox" value="Challenges" id="defaultCheck1">
             <label class="form-check-label" for="defaultCheck1">Challenges</label>
           </div>
           <div class="form-check">
-            <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+            <input class="form-check-input" type="checkbox" value="Open Source Community" id="defaultCheck1">
             <label class="form-check-label" for="defaultCheck1">Open Source Community
             </label>
           </div>
           <div class="form-check">
-            <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+            <input class="form-check-input" type="checkbox" value="Gitter help rooms" id="defaultCheck1">
             <label class="form-check-label" for="defaultCheck1">Gitter help rooms
             </label>
           </div>
           <div class="form-check">
-            <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+            <input class="form-check-input" type="checkbox" value="City Meetups" id="defaultCheck1">
             <label class="form-check-label" for="defaultCheck1">Videos
             </label>
           </div>
           <div class="form-check">
-            <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+            <input class="form-check-input" type="checkbox" value="City Meetups" id="defaultCheck1">
             <label class="form-check-label" for="defaultCheck1">City Meetups
 
             </label>
           </div>
           <div class="form-check">
-            <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+            <input class="form-check-input" type="checkbox" value="Wiki" id="defaultCheck1">
             <label class="form-check-label" for="defaultCheck1">Wiki
             </label>
           </div>
           <div class="form-check">
-            <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+            <input class="form-check-input" type="checkbox" value="Forum" id="defaultCheck1">
             <label class="form-check-label" for="defaultCheck1">Forum
             </label>
           </div>
           <div class="form-check">
-            <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+            <input class="form-check-input" type="checkbox" value="Additional Courses" id="defaultCheck1">
             <label class="form-check-label" for="defaultCheck1">Additional Courses
 
             </label>
@@ -143,7 +144,7 @@
           <textarea class="form-control" id="Textarea" rows="3" placeholder="Enter your comment here..."></textarea>
         </div>
       
-        <input class="form-control btn btn-success mt-4" id="button" type="submit" value="Submit">
+        <input class="form-control btn btn-success mt-4" id="submit" type="submit" value="submit">
 
 
 
@@ -152,6 +153,9 @@
 </div>
     </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+  <script src="https://unpkg.com/@popperjs/core@2"></script>
+<script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+
 
 </body>
 </html>
